# mangadex-fs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/api/: chapter.rs  manga.rs  mdlist.rs  mod.rs  session.rs
src/api/scrap/: manga_by_title.rs  mdlist.rs  mod.rs
src/fs/: chapter.rs  chapter_info.rs  entry.rs  manga.rs  mod.rs  page.rs
src/lib/: context.rs  lib.rs
src/lib/api/: api.rs  chapter.rs  cover.rs  follow.rs  follows.rs  genre.rs  manga.rs  manga_status.rs  mark_chapter.rs  mdlist.rs  mod.rs  page.rs  quick_search.rs  search.rs  session.rs  set_view_mode.rs  unfollow.rs  user_agent.rs
src/lib/cfg/: mod.rs
src/lib/fs/: entries.rs  mod.rs
src/lib/fs/entry/: chapter.rs  cover.rs  manga.rs  mod.rs  page.rs
src/lib/ipc/: command.rs  constants.rs  mod.rs  response.rs  stream.rs  subcommand.rs
