[package]
name = "mangadex-fs"
version = "0.1.2"
authors = ["bittersweetshimmer"]
edition = "2018"
repository = "https://github.com/bittersweetshimmer/mangadex-fs"
description = "FUSE driver using MangaDex API."
keywords = ["fuse", "filesystem"]
categories = ["filesystem"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
reqwest = "0.9.20"
serde = "1.0.101"
lazy_static = "1.4.0"
libc = "0.2.5"
time = "0.1.42"
fuse_mt = "0.5.0"
nix = "0.15.0"
chrono = "0.4.9"
clap = "2.33.0"
env_logger = "0.7"
log = "0.4"
sanitize-filename = "0.2.1"