[package]
name = "mangadex-fs"
version = "0.2.0-alpha.0"
authors = ["bittersweetshimmer"]
edition = "2018"
repository = "https://github.com/bittersweetshimmer/mangadex-fs"
description = "FUSE driver using MangaDex API."
keywords = ["fuse", "filesystem"]
categories = ["filesystem"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
scraper = "0.12"
cookie = "0.14"
tokio = { version = "0.2", features = ["macros", "uds", "io-util", "fs", "rt-core", "signal", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
clap = "2.33"
log = "0.4"
env_logger = "0.7"
colored = "2.0"
directories = "3.0"
toml = "0.5"

[lib]
name = "mangadex_fs"
path = "src/lib/lib.rs"

[[bin]]
name = "mangadex-fsd"
path = "src/bin/daemon/main.rs"

[[bin]]
name = "mangadex-fsc"
path = "src/bin/client/main.rs"